New pages implemented

--- a/faq.html
+++ b/faq.html
@@ -47,8 +47,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
     <link rel="preload" as="style" href="css/styles.css" />
-    <link rel="icon" href="favicon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="favicon.svg" />
+   <link rel="icon" href="./css/logo.jpg" type="image/jpeg" />
+    <link rel="apple-touch-icon" href="css/logo.jpg" />
     <!-- Structured Data (JSON-LD) for FAQs -->
     <script type="application/ld+json">
     {
@@ -175,7 +175,7 @@
     <header class="site-header">
       <div class="container header-inner">
         <div class="logo">
-          <img src="favicon.svg" alt="eizyGroup logo" class="logo-icon" width="40" height="40" />
+          <img src="css/logo.jpg" alt="eizyGroup logo" class="logo-icon" width="40" height="40" />
           <span class="logo-text">eizyGroup</span>
         </div>
         <nav class="main-nav" aria-label="Main navigation">
