--- a/about.html
+++ b/about.html
@@ -65,8 +65,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
     <link rel="preload" as="style" href="css/styles.css" />
-    <link rel="icon" href="favicon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="favicon.svg" />
+    <link rel="icon" href="./css/logo.jpg" type="image/jpeg" />
+    <link rel="apple-touch-icon" href="css/logo.jpg" />
     <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json">
       {
@@ -93,7 +93,13 @@
     <header class="site-header">
       <div class="container header-inner">
         <div class="logo">
-          <img src="favicon.svg" alt="eizyGroup logo" class="logo-icon" width="40" height="40" />
+          <img
+            src="css/logo.jpg"
+            alt="eizyGroup logo"
+            class="logo-icon"
+            width="40"
+            height="40"
+          />
           <span class="logo-text">eizyGroup</span>
         </div>
         <nav class="main-nav" aria-label="Main navigation">
@@ -465,7 +471,13 @@
                 justify-content: center;
               "
             >
-              <span style="font-size: 5rem">👨‍💻</span>
+              <img
+                src="./css/my-pic.jpg"
+                alt=""
+                height="120px"
+                width="120px"
+                style="border-radius: 50%; height: 100%; width: 100%"
+              />
             </div>
 
             <h3 style="font-size: 1.5rem; margin-bottom: 0.5rem">
