--- a/dashboard.html
+++ b/dashboard.html
@@ -22,15 +22,21 @@
     ></script>
     <link rel="preload" as="style" href="css/styles.css" />
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="icon" href="favicon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="favicon.svg" />
+    <link rel="icon" href="./css/logo.jpg" type="image/jpeg" />
+    <link rel="apple-touch-icon" href="css/logo.jpg" />
     <noscript><link rel="stylesheet" href="css/styles.css" /></noscript>
   </head>
   <body id="app-body">
     <header class="site-header dashboard-header">
       <div class="container header-inner">
         <div class="logo">
-          <img src="favicon.svg" alt="eizyGroup logo" class="logo-icon" width="40" height="40" />
+          <img
+            src="css/logo.jpg"
+            alt="eizyGroup logo"
+            class="logo-icon"
+            width="40"
+            height="40"
+          />
           <span class="logo-text">eizyGroup</span>
         </div>
         <div class="header-actions">
