--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     <link rel="preload" as="style" href="css/styles.css" />
     <title>eizyGroup — Bias-Free Group Generator</title>
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="icon" href="favicon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="favicon.svg" />
+    <link rel="icon" href="./css/logo.jpg" type="image/jpeg" />
+    <link rel="apple-touch-icon" href="css/logo.jpg" />
     <script defer src="js/app.js"></script>
     <noscript><link rel="stylesheet" href="css/styles.css" /></noscript>
   </head>
@@ -55,7 +55,7 @@
       <div class="container header-inner">
         <div class="logo">
           <img
-            src="favicon.svg"
+            src="css/logo.jpg"
             alt="eizyGroup logo"
             class="logo-icon"
             width="40"
