--- a/privacy.html
+++ b/privacy.html
@@ -41,8 +41,8 @@
     <link rel="preload" as="style" href="css/styles.css" />
     <title>Privacy Policy — eizyGroup GDPR & FERPA Compliant</title>
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="icon" href="favicon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="favicon.svg" />
+   <link rel="icon" href="./css/logo.jpg" type="image/jpeg" />
+    <link rel="apple-touch-icon" href="css/logo.jpg" />
     <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json">
     {
@@ -96,7 +96,7 @@
     <header class="site-header">
       <div class="container header-inner">
         <div class="logo">
-          <img src="favicon.svg" alt="eizyGroup logo" class="logo-icon" width="40" height="40" />
+          <img src="css/logo.jpg" alt="eizyGroup logo" class="logo-icon" width="40" height="40" />
           <span class="logo-text">eizyGroup</span>
         </div>
         <nav class="main-nav">
