New pages implemented

--- a/faq.html
+++ b/faq.html
@@ -130,7 +130,7 @@
         margin-bottom: 1.5rem;
         padding-bottom: 0.5rem;
         border-bottom: 2px solid var(--accent);
-        color: #0f1724;
+        color: #fff;
         text-align: center;
       }
       .faq-item {
@@ -217,18 +217,18 @@
                 margin: 1rem auto;
               "
             >
-              Get answers to common questions about eizyGroup
+              COMING SOON !!!
             </p>
           </div>
         </div>
       </section>
 
       <!-- FAQ Content -->
-      <section class="section">
-        <div class="container" style="max-width: 800px; width: 100%; margin-left: auto; margin-right: auto; padding: 0 1rem;">
+      <!-- <section class="section"> -->
+        <!-- <div class="container" style="max-width: 800px; width: 100%; margin-left: auto; margin-right: auto; padding: 0 1rem;"> -->
           <!-- Getting Started Category -->
-          <div class="faq-category">
-            <h3>🚀 Getting Started</h3>
+          <!-- <div class="faq-category"> -->
+            <!-- <h3>🚀 Getting Started</h3>
 
             <div class="faq-item active" onclick="toggleFAQ(this)">
               <div class="faq-question">
@@ -263,9 +263,9 @@
                   account is completely free and takes 30 seconds to create.
                 </div>
               </div>
-            </div>
+            </div> -->
 
-            <div class="faq-item" onclick="toggleFAQ(this)">
+            <!-- <div class="faq-item" onclick="toggleFAQ(this)">
               <div class="faq-question">
                 <span>Can I use it on mobile?</span>
                 <span class="faq-toggle">▼</span>
@@ -290,12 +290,12 @@
                   works efficiently with any size class or group.
                 </div>
               </div>
-            </div>
-          </div>
+            </div> -->
+          <!-- </div> -->
 
           <!-- Features Category -->
-          <div class="faq-category">
-            <h3>⚙️ Features & Functionality</h3>
+          <!-- <div class="faq-category"> -->
+            <!-- <h3>⚙️ Features & Functionality</h3>
 
             <div class="faq-item" onclick="toggleFAQ(this)">
               <div class="faq-question">
@@ -320,9 +320,9 @@
                   </ul>
                 </div>
               </div>
-            </div>
+            </div> -->
 
-            <div class="faq-item" onclick="toggleFAQ(this)">
+            <!-- <div class="faq-item" onclick="toggleFAQ(this)">
               <div class="faq-question">
                 <span>What analytics does eizyGroup show?</span>
                 <span class="faq-toggle">▼</span>
@@ -354,12 +354,12 @@
                   </ul>
                 </div>
               </div>
-            </div>
+            </div> -->
 
-            <div class="faq-item" onclick="toggleFAQ(this)">
+            <!-- <div class="faq-item" onclick="toggleFAQ(this)">
               <div class="faq-question">
-                <span>Can I export my groups?</span>
-                <span class="faq-toggle">▼</span>
+                <span>Can I export my groups?</span> -->
+                <!-- <span class="faq-toggle">▼</span>
               </div>
               <div class="faq-answer">
                 <div class="faq-answer-content">
@@ -401,11 +401,11 @@
                   year!
                 </div>
               </div>
-            </div>
-          </div>
+            </div> -->
+          <!-- </div> -->
 
           <!-- Privacy & Security Category -->
-          <div class="faq-category">
+          <!-- <div class="faq-category">
             <h3>🔒 Privacy & Security</h3>
 
             <div class="faq-item" onclick="toggleFAQ(this)">
@@ -488,10 +488,10 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- Technical Category -->
-          <div class="faq-category">
+          <!-- <div class="faq-category">
             <h3>💻 Technical Questions</h3>
 
             <div class="faq-item" onclick="toggleFAQ(this)">
@@ -563,10 +563,10 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- Troubleshooting Category -->
-          <div class="faq-category">
+          <!-- <div class="faq-category">
             <h3>🔧 Troubleshooting</h3>
 
             <div class="faq-item" onclick="toggleFAQ(this)">
@@ -644,10 +644,10 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- General Category -->
-          <div class="faq-category">
+          <!-- <div class="faq-category">
             <h3>❓ General Questions</h3>
 
             <div class="faq-item" onclick="toggleFAQ(this)">
@@ -725,12 +725,12 @@
                 </div>
               </div>
             </div>
-          </div>
-        </div>
-      </section>
+          </div> -->
+        <!-- </div>
+      </section> -->
 
       <!-- CTA Section -->
-      <section class="section cta-section">
+      <!-- <section class="section cta-section">
         <div class="container" style="text-align: center">
           <h2 style="font-size: 1.5rem; margin-bottom: 1rem">
             Still have questions?
@@ -747,7 +747,7 @@
             Get Started
           </button>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <footer class="site-footer" role="contentinfo">
