--- a/about.html
+++ b/about.html
@@ -613,7 +613,7 @@
             style="
               max-width: 800px;
               margin: 0 auto;
-              background: white;
+              background: #e53935;
               padding: 2rem;
               border-radius: 12px;
               border-left: 4px solid var(--accent);
@@ -659,7 +659,7 @@
           >
             <div style="padding: 1.5rem; text-align: center; max-width: 280px">
               <h4
-                style="font-size: 1.2rem; margin-bottom: 0.5rem; color: #0f1724"
+                style="font-size: 1.2rem; margin-bottom: 0.5rem; color: #f57c00"
               >
                 🎯 Fairness
               </h4>
@@ -670,7 +670,7 @@
             </div>
             <div style="padding: 1.5rem; text-align: center; max-width: 280px">
               <h4
-                style="font-size: 1.2rem; margin-bottom: 0.5rem; color: #0f1724"
+                style="font-size: 1.2rem; margin-bottom: 0.5rem; color: #0d47a1"
               >
                 🔐 Privacy
               </h4>
@@ -681,7 +681,7 @@
             </div>
             <div style="padding: 1.5rem; text-align: center; max-width: 280px">
               <h4
-                style="font-size: 1.2rem; margin-bottom: 0.5rem; color: #0f1724"
+                style="font-size: 1.2rem; margin-bottom: 0.5rem; color: #e53935"
               >
                 ✨ Simplicity
               </h4>
@@ -692,7 +692,7 @@
             </div>
             <div style="padding: 1.5rem; text-align: center; max-width: 280px">
               <h4
-                style="font-size: 1.2rem; margin-bottom: 0.5rem; color: #0f1724"
+                style="font-size: 1.2rem; margin-bottom: 0.5rem; color: #388e3c"
               >
                 ⚡ Efficiency
               </h4>
@@ -703,7 +703,7 @@
             </div>
             <div style="padding: 1.5rem; text-align: center; max-width: 280px">
               <h4
-                style="font-size: 1.2rem; margin-bottom: 0.5rem; color: #0f1724"
+                style="font-size: 1.2rem; margin-bottom: 0.5rem; color: #7b1fa2"
               >
                 🌍 Accessibility
               </h4>
@@ -714,7 +714,7 @@
             </div>
             <div style="padding: 1.5rem; text-align: center; max-width: 280px">
               <h4
-                style="font-size: 1.2rem; margin-bottom: 0.5rem; color: #0f1724"
+                style="font-size: 1.2rem; margin-bottom: 0.5rem; color: #e53935"
               >
                 🤝 Community
               </h4>
