--- a/about.html
+++ b/about.html
@@ -129,10 +129,10 @@
 
     <main id="main-content">
       <!-- Hero Section -->
-      <section class="section hero-section" style="padding: 3rem 0">
+      <section class="section about-hero-section" style="padding: 3rem 0">
         <div class="container">
           <div style="text-align: center; margin-bottom: 3rem">
-            <h1>About eizyGroup</h1>
+            <h1>About <span>eizyGroup</span></h1>
             <p
               style="
                 font-size: 1.2rem;
