--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
             >FAQ</a
           >
           <a
+            href="contact.html"
+            class="nav-link"
+            aria-label="Frequently asked questions"
+            >Contact Us</a
+          >
+          <a
             href="#"
             class="nav-link"
             id="nav-login"
